--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: wheat;
-    background-color: black;
+    color: rgb(179, 245, 242);
+    background-color: rgb(0, 0, 0);
 }
 body{
     background-color: olive;
